--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "browserify-zlib": "^0.2.0",
     "core-js": "^3.8.3",
     "fs": "^0.0.1-security",
+    "jquery": "^3.6.3",
     "sass": "^1.56.1",
     "sass-loader": "^13.2.0",
     "vue": "^3.2.13",
