--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.2.5",
     "browserify-zlib": "^0.2.0",
     "core-js": "^3.8.3",
     "fs": "^0.0.1-security",
