--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "sass": "^1.56.1",
     "sass-loader": "^13.2.0",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
